--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,10 +82,10 @@ flutter:
         - asset: assets/fonts/RubikMonoOne-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
+    - family: Fredoka
+      fonts:
+        - asset: assets/fonts/Fredoka-Regular.ttf
+        - asset: assets/fonts/Fredoka-Bold.ttf
   #         weight: 700
   #
   # For details regarding fonts from package dependencies,
